Updated shell script to download Minecraft 1.18.1